# FM-LLM-Solver

./: .bandit  .dockerignore  .env.backup  .gitignore  .pre-commit-config.yaml  2.0  CAPABILITY_VALIDATION_REPORT.md  CONSOLIDATION_PROGRESS_REPORT.md  CRITICAL_VERIFICATION_ANALYSIS.md  DEPLOYMENT_GUIDE_CLI.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  Dockerfile.inference  Dockerfile.production  Dockerfile.simple  Dockerfile.web  Dockerfile.web-final  Dockerfile.web-fixed  Dockerfile.web.simple  ENHANCED_USER_SYSTEM_TEST_REPORT.md  EXPERIMENTAL_RESULTS_REPORT.md  GCP_PROFESSIONAL_DEPLOYMENT.md  GCP_QUICK_START.md  GuidanceDoc.txt  HYBRID_DEPLOYMENT.md  INSTALLATION.md  ITERATION_SUMMARY.md  LLM_GENERATION_TEST_SUMMARY.md  PHASE1_DAY5_SUMMARY.md  PHASE1_TODO.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_PHASE3_TECHNICAL_ROADMAP.md  PHASE2_STARTUP_SUMMARY.md  PHASE2_TODO_LIST.md  PRODUCTION_READINESS_SUMMARY.md  QUICK_START_CHECKLIST.md  QUICK_START_GUIDE.md  README.md  REFACTORING_SUMMARY.md  SCRIPTS_CONSOLIDATION_PLAN.md  (+88 more)
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh
.github/: CODEOWNERS  GITHUB_ACTIONS_FIXES.md  branch-protection.yml  dependabot.yml
Guidance_Documents/: FM-LLM, Design Document.rtf  design_doc.md
backend/: .eslintrc.js  Dockerfile  env.sample  jest.config.js  knexfile.ts  package.json  tsconfig.json
config/: base.yaml  config-development.yaml  config-production.yaml  config.yaml  config.yaml.bak  env.example
data/: benchmark_systems.json  benchmark_systems_reduced.json  ft_data_discrete_time.jsonl  ft_discrete_time_data.jsonl  ft_manual_data.jsonl  user_ids.csv
data_fetching/: paper_fetcher.py
deploy/: README.md  docker-compose.yml  gcp-setup.sh  init.sql
deployment/: README.md  __init__.py  cloudbuild-inference.yaml  cloudbuild-web.yaml  deploy-production-west.sh  deploy.py  deploy.sh  modal_app.py  prometheus.yml  test_deployment.py
docs/: API_REFERENCE.md  AWQ_MODELS.md  CICD_DEPLOYMENT_GUIDE.md  CODE_GENERATION_MODELS.md  CONTRIBUTING.md  CONVERSATIONAL_INTERFACE.md  DEVELOPMENT.md  DISCRETE_CONTINUOUS_BARRIER_CERTIFICATES.md  DOMAIN_BOUNDS_FEATURE.md  EFFICIENT_DEPLOYMENT.md  MEMORY_OPTIMIZATION.md  MONITORING.md  MONITORING_GUIDE.md  MVP_SUMMARY.md  OPTIMIZED_README.md  PHASES_QUICK_REFERENCE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  REPOSITORY_STRUCTURE.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  SECURITY_USAGE_GUIDE.md  STOCHASTIC_FILTER_README.md  USER_GUIDE.md  VERIFICATION.md  VERIFICATION_SYSTEM_EXPLAINED.md  VERIFICATION_SYSTEM_PRESENTATION_SCRIPT.md  conf.py  index.rst
evaluation/: evaluate_pipeline.py  verify_certificate.py  verify_certificate_fixed.py  verify_certificate_unsafe_fix.py  visualize_results.py
fine_tuning/: combine_datasets.py  create_discrete_time_data.py  create_finetuning_data.py  create_type_specific_data.py  extract_from_papers.py  finetune_llm.py  generate_synthetic_data.py
fm_llm_solver/: __init__.py
frontend/: .eslintrc.js  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
gcp-deploy/: Dockerfile.backend.prod  Dockerfile.frontend.prod  README.md  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  frontend.env.production  nginx.conf
inference/: generate_certificate.py
inference_api/: __init__.py  main.py
knowledge_base/: README.md  alternative_pdf_processor.py  document_classifier.py  kb_utils.py  knowledge_base_builder.py  optimized_chunker.py  utils.py
paper_population/: README.md  create_finetuning_data.py  finetune_llm.py  generate_certificate.py  install.sh  knowledge_base_builder.py  requirements.txt  test_knowledge_base.py
reports/: OPTIMIZATION_PROGRESS_REPORT.md  REFACTORING_SUMMARY.md  WEB_INTERFACE_INTERROGATION_SUMMARY.md
requirements/: README.md  base.txt  dev.txt  inference.txt  inference_requirements.txt  open_source_kb_requirements.txt  production.txt  requirements.txt  web.txt  web_requirements.txt
results/: barrier_certificate_theory_fix_results.json  comprehensive_interrogation_results.json  integration_report.json  optimization_results.json  quick_test_results.json  test_report_20250708_194246.json  verification_boundary_fix_diagnosis.json  web_llm_test_results.json
scripts/: complete_production_assessment.py  configure_stochastic_filter.py  create-gpu-nodepool.sh  deploy-full-stack.sh  deploy-gcp.sh  deploy-via-cloud-build.sh  deployment_check.py  fetch_discrete_time_papers.py  (+15 more)
(+475 files in other folders)
